Enable JCK automation on 17 z/OS
Signed-off-by: Mesbah Alam <Mesbah_Alam@ca.ibm.com>